refining and organizing... i think there is plenty up for discussion here and something that is more of a team agreement and something to evolve with our practice. i think i should spend some time making the slider more visually exciting interactively but this is probably good. i did not measure anything really. Sorry

--- a/src/app/shared/components/buttons/copy/copybutton.module.css
+++ b/src/app/shared/components/buttons/copy/copybutton.module.css
@@ -10,7 +10,6 @@
     cursor: pointer;
 }
 
-
 .copyButton:hover {
     background-color: var(--color-smokey);
 }
@@ -26,4 +25,10 @@
 
 .copyIcon {
     fill: var(--color-white);
+}
+
+@media (max-width: 32rem) {
+    .copyButton {
+        display: none;
+    }
 }
