--- a/src/app/shared/components/text/text.module.css
+++ b/src/app/shared/components/text/text.module.css
@@ -1,9 +1,3 @@
-.bodyLarge {
-    font-family: 'Inter', sans-serif;
-    font-size: var(--font-body-large);
-    font-weight: var(--font-weight-regular);
-    line-height: var(--line-height-body-large);
-    color: var(--color-smokey);
-    text-align: left;
-    margin-bottom: 1.5rem;
+.text {
+    composes: body-large from '../../styles/utilities/typography.modules.css';
 }
