--- a/src/app/global.css
+++ b/src/app/global.css
@@ -1,4 +1,9 @@
 :root {
+    font-synthesis: none;
+    text-rendering: optimizeLegibility;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+    -webkit-text-size-adjust: 100%;
     --base-font-size: 16px;
     --spacing-unit: 1rem;
 
