--- a/src/app/shared/components/banner/banner.module.css
+++ b/src/app/shared/components/banner/banner.module.css
@@ -8,10 +8,6 @@
         var(--color-funky-gradient);
     background-origin: border-box;
     background-clip: content-box, border-box;
-    font-family: 'Inter', sans-serif;
-    font-weight: var(--font-weight-regular);
-    font-size: var(--font-body-small);
-    line-height: var(--line-height-body-small);
-    color: var(--color-white);
     text-align: center;
+    composes: banner-type from '../../styles/utilities/typography.modules.css';
 }
